[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EventGraph/scripts/ChoiceBranch.gd" type="Script" id=1]

[node name="ChoiceDialogue" type="GraphNode"]
margin_right = 135.0
margin_bottom = 59.0
title = "Choice"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="ReferenceNameEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 119.0
margin_bottom = 48.0
placeholder_text = "Reference Name"

[node name="EditChoices" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 119.0
margin_bottom = 68.0
alignment = 2

[node name="MinusButton" type="Button" parent="EditChoices"]
margin_left = 59.0
margin_right = 79.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "-"

[node name="PlusButton" type="Button" parent="EditChoices"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "+"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 119.0
margin_bottom = 73.0
[connection signal="pressed" from="EditChoices/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="EditChoices/PlusButton" to="." method="_on_PlusButton_pressed"]
